top bar z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ html {
     position: sticky;
     top: 0;
     opacity: 0.9;
+    z-index: 200;
 }
 
 #top-bar .btn-container {
